; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_eval_unary_op_ll.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_eval_unary_op_ll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @eval_unary_op_ll(i32 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %21 [
    i32 131, label %7
    i32 128, label %9
    i32 130, label %12
    i32 129, label %15
  ]

7:                                                ; preds = %2
  %8 = load i64, i64* %5, align 8
  store i64 %8, i64* %3, align 8
  br label %24

9:                                                ; preds = %2
  %10 = load i64, i64* %5, align 8
  %11 = sub nsw i64 0, %10
  store i64 %11, i64* %3, align 8
  br label %24

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = xor i64 %13, -1
  store i64 %14, i64* %3, align 8
  br label %24

15:                                               ; preds = %2
  %16 = load i64, i64* %5, align 8
  %17 = icmp ne i64 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = sext i32 %19 to i64
  store i64 %20, i64* %3, align 8
  br label %24

21:                                               ; preds = %2
  %22 = call i32 @assert(i32 0)
  br label %23

23:                                               ; preds = %21
  store i64 0, i64* %3, align 8
  br label %24

24:                                               ; preds = %23, %15, %12, %9, %7
  %25 = load i64, i64* %3, align 8
  ret i64 %25
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
